# minesave

./: .gitignore  Cargo.toml  LICENSE  README.MD  README.md  build.rs  flake.nix
locales/: en-US.yaml  zh-CN.yaml
src/: backup.rs  cli.rs  cmd.rs  error.rs  globals.rs  main.rs  settings.rs  slint_api.rs  tasks.rs  utils.rs
src/api/: mod.rs  tcp.rs
src/backup/: data.rs  hash.rs  mod.rs  save.rs
src/ui/: main_window.rs  mod.rs  utils.rs
src/ui/pages/: home.rs  mod.rs  saves.rs  settings.rs
ui/: main.slint  sidebar.slint
ui/components/: cards.slint  labelled_things.slint
ui/logic/: api.slint  backups.slint  status.slint
ui/views/: backups.slint  pages.slint  settings.slint  welcome.slint
ui/views/backups/: add_scan_root.slint  detailed_info.slint
