[package]
name = "minesave"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false


[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slint = { version = "1.14.1", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "rt", "rt-multi-thread"] }
walkdir = "2.5.0"

[build-dependencies]
slint-build = "1.14.1"

