[package]
name = "minesave"
version = "0.1.0"
edition = "2024"
build = "build.rs"
publish = false


[dependencies]
anyhow = "1.0.100"
astral-tokio-tar = "0.5.6"
async-compression = { version = "0.4.36", features = ["tokio", "zstd"] }
clap = { version = "4.5.51", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.29"
ring = "0.17.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slint = { version = "1.14.1", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread"] }
uuid = { version = "1.19.0", features = ["v4"] }
walkdir = "2.5.0"

[build-dependencies]
slint-build = "1.14.1"

