[package]
name = "minesave"
version = "0.1.0"
edition = "2024"

[package.metadata.i18n]
available-locales = ["en-US", "zh-CN"]
default-locale = "zh-CN"
load-path = "locales"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive", "cargo"] }
dirs = "6.0.0"
duct = "1.1.1"
env_logger = "0.11.8"
gtk4 = "0.10.3"
log = "0.4.29"
native-dialog = "0.9.6"
rust-i18n = "3.1.5"
rustic_backend = "0.5.4"
rustic_core = "0.9.0"
serde = "1.0.228"
serde_json = "1.0.149"
sys-locale = "0.3.2"
walkdir = "2.5.0"


